--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "next": "13.5.4",
     "react": "^18",
     "react-bootstrap": "^2.9.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18"
   },
   "devDependencies": {
