--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "@mui/material": "^5.14.13",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
-    "next": "13.5.4",
+    "next": "^13.5.5",
     "react": "^18",
     "react-bootstrap": "^2.9.0",
     "react-cookie": "^6.1.1",
