--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,15 @@
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "next": "^13.5.5",
     "react": "^18",
     "react-bootstrap": "^2.9.0",
     "react-cookie": "^6.1.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10",
