--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/lab": "^5.0.0-alpha.149",
     "@mui/material": "^5.14.13",
     "@reduxjs/toolkit": "^1.9.7",
+    "autosuggest-highlight": "^3.3.4",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "cookies-next": "^4.0.0",
