--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
