--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,14 @@
     "@mui/icons-material": "^5.14.13",
     "@mui/lab": "^5.0.0-alpha.149",
     "@mui/material": "^5.14.13",
+    "@mui/x-date-pickers": "^6.18.1",
+    "@mui/x-date-pickers-pro": "^6.18.1",
     "@reduxjs/toolkit": "^1.9.7",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "cookies-next": "^4.0.0",
+    "dayjs": "^1.11.10",
     "next": "^13.5.5",
     "react": "^18",
     "react-bootstrap": "^2.9.0",
