--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,11 +24,13 @@
     "bootstrap": "^5.3.2",
     "cookies-next": "^4.0.0",
     "dayjs": "^1.11.10",
+    "leaflet": "^1.9.4",
     "next": "^13.5.5",
     "react": "^18",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
