--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-leaflet": "^4.2.1",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10",
